Blog postman draft (#69)
* basic newman generator

* delete original item id
