# openapigenerated.json
@@ -2,10 +2,10 @@
   "openapi": "3.0.1",
   "info": {
     "title": "OpenApi",
-    "version": "2020-11-05T04:33:45.699Z"
+    "version": "2021-02-07T04:47:28.606Z"
   },
   "paths": {
-    "/{hello}/basic": {
+    "/example/{hello}/basic": {
       "post": {
         "parameters": [
           {
@@ -63,7 +63,7 @@
         }
       }
     },
-    "/{hello}/advanced": {
+    "/example/{hello}/advanced": {
       "post": {
         "parameters": [
           {
